--- a/src/style/_login.scss
+++ b/src/style/_login.scss
@@ -2,7 +2,7 @@
 //
 // caos-dashboard - CAOS dashboard
 //
-// Copyright © 2016 INFN - Istituto Nazionale di Fisica Nucleare (Italy)
+// Copyright © 2016, 2017 INFN - Istituto Nazionale di Fisica Nucleare (Italy)
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -32,9 +32,6 @@
   text-align: center;
   color: #fff;
   padding: 3em;
-  .col-lg-4{
-    padding: 0;
-  }
   .input-lg {
     height: 46px;
     padding: 10px 16px;
