Fix application title
Signed-off-by: Fabrizio Chiarello <fabrizio.chiarello@pd.infn.it>

--- a/src/pug/_layout.pug
+++ b/src/pug/_layout.pug
@@ -27,7 +27,7 @@ head
   meta(
     name='viewport'
     content='initial-scale=1.0, user-scalable=no, width=device-width, maximum-scale=1.0, user-scalable=no')
-  title CAOS - Cloud Accounting for Open Stack
+  title CAOS - Control Application for OpenStack
 
   script(src='js/vendor/shim.min.js')
   script(src='js/vendor/zone.min.js')
