Fix help in graph caption
Signed-off-by: Fabrizio Chiarello <fabrizio.chiarello@pd.infn.it>

--- a/src/app/components/graph.component.pug
+++ b/src/app/components/graph.component.pug
@@ -51,4 +51,4 @@
       //     | Download data
       //     i.fa.fa-fw.fa-download
 
-    p To select a single project, <b>double click</b> on its marker.
+    p Click on legend entries to cycle their visibility. To select a single series, double click on the legend entry.
