--- a/src/style/_login.scss
+++ b/src/style/_login.scss
@@ -28,7 +28,7 @@
   right: 0;
   bottom: 0;
   overflow: auto;
-  background: $topnav-background-color;
+  background: $dark;
   text-align: center;
   color: #fff;
   padding: 3em;
@@ -55,7 +55,7 @@
     -webkit-border-radius: 50px;
             border-radius: 50px;
     color: rgba(255,255,255,0.8);
-    background: $topnav-background-color;
+    background: $dark;
     border: 2px solid rgba(255,255,255,0.8);
     font-size: 18px;
     line-height: 40px;
