--- a/src/app/dashboard.component.html
+++ b/src/app/dashboard.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-dark bg-dark navbar-expand-sm fixed-top">
   <a class="navbar-brand" routerLink="/">Home</a>
-  <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed">
+  <button class="navbar-toggler" type="button" (click)="navbarCollapsed = !navbarCollapsed">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" [collapse]="isCollapsed">
+  <div class="collapse navbar-collapse" [collapse]="navbarCollapsed">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item"><a class="nav-link" routerLink="projects" routerLinkActive="active"><i class="fa fa-fw fa-users"></i>Projects</a></li>
       <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="hypervisors"><i class="fa fa-fw fa-microchip"></i>Hypervisors</a></li>
