--- a/src/app/hypervisors.component.html
+++ b/src/app/hypervisors.component.html
@@ -35,7 +35,7 @@
       <div class="card-block">
         <h3 class="card-title">Average Load</h3>
         <div class="row">
-          <div class="col-2">5 minutes</div>
+          <div class="col-2">5min</div>
           <div class="col">
             <div class="progress">
               <div class="progress-bar" [style.width.%]="total.load_5m" [ngClass]="usage_class(total.load_5m)">{{ total.load_5m | number:'1.2-2' }}%</div>
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-2">10 minutes</div>
+          <div class="col-2">10min</div>
           <div class="col">
             <div class="progress">
               <div class="progress-bar" [style.width.%]="total.load_10m" [ngClass]="usage_class(total.load_10m)">{{ total.load_10m | number:'1.2-2' }}%</div>
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-2">15 minutes</div>
+          <div class="col-2">15min</div>
           <div class="col">
             <div class="progress">
               <div class="progress-bar" [style.width.%]="total.load_15m" [ngClass]="usage_class(total.load_15m)">{{ total.load_15m | number:'1.2-2' }}%</div>
