--- a/src/app/components/graph.component.html
+++ b/src/app/components/graph.component.html
@@ -2,13 +2,13 @@
   <div class="card-header">
     <div class="d-flex justify-content-between">
       <div class="p-2" *ngIf="show_set_selector">
-        <p-dropdown [options]="sets" (onChange)="selected_set=$event.value" [autoWidth]="true" [style]="{'width': '100%'}"></p-dropdown>
+        <dropdown [items]="sets" (valueChange)="selected_set=$event"></dropdown>
       </div>
-      <div class="p-2" *ngIf="show_granularity_selector">Granularity:
-        <p-dropdown [options]="granularities" (onChange)="selected_granularity=$event.value"></p-dropdown>
+      <div class="p-2" *ngIf="show_granularity_selector" pTooltip="Granularity">
+        <dropdown [items]="granularities" [(value)]="selected_granularity"></dropdown>
       </div>
-      <div class="p-2 dropdown">
-        <button class="btn btn-outline-dark dropdown-toggle" type="button" [popover]="settings_popover" placement="bottom" container="body" #pop="bs-popover"><i class="fa fa-fw fa-wrench"></i>Settings</button>
+      <div class="p-2" pTooltip="Linewidth">
+        <dropdown [items]="linewidths" (valueChange)="selected_linewidth=$event" icon="pencil"></dropdown>
       </div>
     </div>
   </div>
@@ -19,7 +19,9 @@
       </div>
       <div class="row justify-content-center">Loading data: {{ fetching_percent | number:'1.2-2' }}%</div>
     </div>
-    <nvd3 [options]="options" [data]="data"></nvd3>
+    <nvd3 #nvd3 [options]="options" [data]="data"></nvd3>
+  </div>
+  <div class="card-footer">
     <div class="btn-toolbar" role="toolbar">
       <div class="btn-group mr-2" role="group">
         <button class="btn btn-outline-dark" type="button" (click)="select_all()" tooltip="Click here to select all all series.">Select all</button>
@@ -33,13 +35,3 @@
     <p>Click on legend entries to cycle their visibility. To select a single series, double click on the legend entry.</p>
   </div>
 </div>
-<ng-template #settings_popover>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-12">
-        <label for="linewidth_selector">Linewidth:</label>
-        <p-dropdown id="linewidth_selector" [options]="linewidths" (onChange)="selected_linewidth=$event.value"></p-dropdown>
-      </div>
-    </div>
-  </div>
-</ng-template>
