--- a/src/app/components/graph.component.html
+++ b/src/app/components/graph.component.html
@@ -5,7 +5,7 @@
         <p-dropdown [options]="sets" (onChange)="selected_set=$event.value" [autoWidth]="true" [style]="{'width': '100%'}"></p-dropdown>
       </div>
       <div class="p-2" *ngIf="show_daterange_selector">
-        <daterange (rangeChange)="date_range=$event"></daterange>
+        <daterange></daterange>
       </div>
       <div class="p-2" *ngIf="show_granularity_selector">Granularity:
         <p-dropdown [options]="granularities" (onChange)="selected_granularity=$event.value"></p-dropdown>
