--- a/src/app/hypervisors.component.html
+++ b/src/app/hypervisors.component.html
@@ -82,7 +82,7 @@
     </div>
   </div>
 </div>
-<graph [config]="graph_config" [show_daterange_selector]="true" [show_set_selector]="true"></graph>
+<graph [config]="graph_config" [show_set_selector]="true"></graph>
 <hr>
 <h3>Hypervisors</h3>
 <p-dataTable #dt [value]="hypervisors" tableStyleClass="table" expandableRows="true">
