--- a/src/app/projects.component.html
+++ b/src/app/projects.component.html
@@ -1,5 +1,5 @@
 <h3>Global Overview (usages over last hour)</h3>
-<graph [config]="graph_config" [show_daterange_selector]="true" [show_set_selector]="true"></graph>
+<graph [config]="graph_config" [show_set_selector]="true"></graph>
 <div class="row">
   <div class="col">
     <div class="card">
