--- a/src/app/dashboard.component.html
+++ b/src/app/dashboard.component.html
@@ -11,6 +11,7 @@
       <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="accounting"><i class="fa fa-fw fa-area-chart"></i>Accounting</a></li>
     </ul>
     <ul class="nav navbar-nav pull-right">
+      <daterange></daterange>
       <li class="nav-item"><a class="nav-link" routerLink="/" (click)="logout()"><i class="fa fa-fw fa-power-off"></i>Log out</a></li>
     </ul>
   </div>
