--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -2,7 +2,7 @@
 //
 // caos-dashboard - CAOS dashboard
 //
-// Copyright © 2016, 2017 INFN - Istituto Nazionale di Fisica Nucleare (Italy)
+// Copyright © 2016, 2017, 2018 INFN - Istituto Nazionale di Fisica Nucleare (Italy)
 //
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -83,6 +83,21 @@ a:hover {
 
   &.glyphicon-chevron-up {
     @extend .fa-chevron-up;
+  }
+}
+
+
+daterange {
+  /* makes the dropdown full width  */
+  .dropdown {
+    position: static;
+  }
+
+  .dropdown-menu {
+    border: none;
+    width: 100%;
+    left: 0;
+    right: 0;
   }
 }
 
